[WIN] Fix compilation of DFGRepatch.cpp https://bugs.webkit.org/show_bug.cgi?id=91241

Reviewed by Geoffrey Garen.

Use intptr_t instead of uintptr_t when calling CodeLocationCommon::dataLabelPtrAtOffset(int)
to fix MSVC "unary minus operator applied to unsigned type, result still unsigned" warning.

* dfg/DFGRepatch.cpp:
(JSC::DFG::dfgResetGetByID):
(JSC::DFG::dfgResetPutByID):


Canonical link: https://commits.webkit.org/109068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122595 268f45cc-cd09-0410-ab3c-d52691b4dbfc